tests/cyclic_generic_structs/error.txt
Validation error: ./tests/cyclic_generic_structs/cyclic_generic_structs.fae, line 6: Cyclic user type `B`
  6| struct B {
            ^
Note: ./tests/cyclic_generic_structs/cyclic_generic_structs.fae, line 7: Via field `field_b` in `B`
  7|     field_b: A[B]
         ^^^^^^^^^^^^^
Note: ./tests/cyclic_generic_structs/cyclic_generic_structs.fae, line 3: Via field `field_a` in `A[B]`
  3|     field_a: T
         ^^^^^^^^^^

Validation error: ./tests/cyclic_generic_structs/cyclic_generic_structs.fae, line 14: Field intializer type mismatch, expected `B` but got `untyped integer` instead
  14|                 field_a: 4
                      ^^^^^^^^^^
